# MLA-checker

./: .gitignore  MLA-checker.cabal  README.md
app/: Main.hs  Test.hs
src/MLA/: AbsSynTree.hs
